removed notification emojis and console spamming, fixed up some ui stuff i saw. Will continue to cleaup any ui elements that look out of place.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -925,7 +925,7 @@ body {
 
 .btn {
     width: 100%;
-    padding: 12px var(--space-lg);
+    padding: 10px var(--space-lg);
     border: none;
     border-radius: var(--radius-md);
     font-size: var(--text-base);
@@ -1593,6 +1593,12 @@ body {
     color: var(--text-secondary);
 }
 
+.modal-footer {
+    padding: 10px 10px 0px 10px;
+    display : flex;
+    gap: 15px;
+}
+
 .modal-actions {
     display: flex;
     gap: var(--space-md);
@@ -1653,8 +1659,8 @@ body {
 
 .modal-close {
     position: absolute;
-    top: var(--space-sm);
-    right: var(--space-md);
+    top: 0;
+    right: 0;
     background: rgba(0, 0, 0, 0.7);
     color: white;
     border: none;
